--- a/packages/jsreport/docker/default/Dockerfile.local
+++ b/packages/jsreport/docker/default/Dockerfile.local
@@ -97,8 +97,8 @@ COPY ./packages/jsreport/docker/default/run.sh run.sh
 RUN node editConfig.js
 
 RUN yarn cache clean --all && rm -rf /tmp/*
-RUN chown -R jsreport:jsreport /app
-USER jsreport:jsreport
+# RUN chown -R jsreport:jsreport /app
+# USER jsreport:jsreport
 
 ENV chrome_launchOptions_executablePath /usr/lib/chromium/chrome
 ENV chrome_launchOptions_args --no-sandbox,--disable-dev-shm-usage
