feat:docker compose ok

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     build:
       context: ./
       dockerfile: ./packages/jsreport/docker/default/Dockerfile.local
-    command: [ "gosu", "node", "server.js" ]
+    # command: [ "gosu", "jsreport", "node", "server.js" ]
     depends_on:
       - mongo
     environment:
