--- a/packages/jsreport/docker/default/Dockerfile.local
+++ b/packages/jsreport/docker/default/Dockerfile.local
@@ -33,7 +33,7 @@ RUN set -eux; \
     gosu --version; \
     gosu nobody true
 
-# RUN addgroup -g "${GID}" -S jsreport && adduser --shell /bin/bash -u "${UID}" -S -G jsreport jsreport
+RUN addgroup -g "${GID}" -S jsreport && adduser --shell /bin/bash -u "${UID}" -S -G jsreport jsreport
 
 # this condition is useful when the alpine registry contain different latest versions
 # per architecture, if the versions match then just use the same version number on both paths
@@ -65,20 +65,20 @@ RUN mkdir -p /app
 
 # we need to create the volume and give it expected owner
 # before the VOLUME step in order for the volume to be created with non-root user
-# RUN mkdir /jsreport
-# RUN chown jsreport:jsreport /jsreport
-# RUN chmod g+s /jsreport
+RUN mkdir /jsreport
+RUN chown jsreport:jsreport /jsreport
+RUN chmod g+s /jsreport
 
-# VOLUME ["/jsreport"]
+VOLUME ["/jsreport"]
 
-# ENV NPM_CONFIG_PREFIX /home/jsreport/.npm-global
-# ENV PATH $PATH:/home/jsreport/.npm-global/bin
+ENV NPM_CONFIG_PREFIX /home/jsreport/.npm-global
+ENV PATH $PATH:/home/jsreport/.npm-global/bin
 
 WORKDIR /app
 
 ENV PUPPETEER_SKIP_DOWNLOAD true
 
-RUN npm i -g --force yarn json-merger
+RUN npm i -g yarn json-merger
 COPY ./packages/jsreport/server.js server.js
 COPY ./packages/jsreport/index.js index.js
 COPY ./packages/jsreport/package.json package.json
@@ -97,9 +97,10 @@ COPY ./packages/jsreport/docker/default/run.sh run.sh
 RUN node editConfig.js
 
 RUN yarn cache clean --all && rm -rf /tmp/*
-# RUN chown -R jsreport:jsreport /app
-# USER jsreport:jsreport
+RUN chown -R jsreport:jsreport /app
+USER jsreport:jsreport
 
+ENV FULL_BUILD true
 ENV chrome_launchOptions_executablePath /usr/lib/chromium/chrome
 ENV chrome_launchOptions_args --no-sandbox,--disable-dev-shm-usage
 
